--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
+    "@ngui/parallax-scroll": "^0.5.0",
     "core-js": "^2.4.1",
+    "ng2-parallax": "^1.0.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
   },
