--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@angular/router": "^3.4.0",
     "@ngui/parallax-scroll": "^0.5.0",
     "@types/google-maps": "^3.2.0",
+    "angular2-materialize": "^6.7.2",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^2.2.4",
+    "materialize-css": "^0.98.1",
     "ng2-map": "^0.16.5",
     "ng2-parallax": "^1.0.0",
     "rxjs": "^5.1.0",
