--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.0",
-    "@angular/compiler": "^2.4.0",
-    "@angular/core": "^2.4.0",
-    "@angular/forms": "^2.4.0",
-    "@angular/http": "^2.4.0",
-    "@angular/platform-browser": "^2.4.0",
-    "@angular/platform-browser-dynamic": "^2.4.0",
-    "@angular/router": "^3.4.0",
+    "@angular/animations": "^4.0.1",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/compiler-cli": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/forms": "^4.0.1",
+    "@angular/http": "^4.0.1",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/platform-server": "^4.0.1",
+    "@angular/router": "^4.0.1",
     "@ngui/parallax-scroll": "^0.5.0",
     "@types/google-maps": "^3.2.0",
     "angular2-materialize": "^6.7.2",
@@ -29,7 +32,9 @@
     "materialize-css": "^0.98.1",
     "ng2-map": "^0.16.5",
     "ng2-parallax": "^1.0.0",
+    "node-geocoder": "^3.16.0",
     "rxjs": "^5.1.0",
+    "typescript": "^2.2.2",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
