--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-mdl/core": "^4.0.3",
     "@angular/animations": "^4.0.1",
     "@angular/common": "^4.0.1",
     "@angular/compiler": "^4.0.1",
@@ -25,13 +26,14 @@
     "@angular/router": "^4.0.1",
     "@ngui/parallax-scroll": "^0.5.0",
     "@types/google-maps": "^3.2.0",
-    "angular2-materialize": "^6.7.2",
+    "angular2-useful-swiper": "^4.0.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
-    "materialize-css": "^0.98.1",
+    "ng2-events": "^3.0.0",
     "ng2-map": "^0.16.5",
-    "ng2-parallax": "^1.0.0",
+    "ng2-page-scroll": "^4.0.0-beta.6",
+    "ng2-scrollspy": "^0.3.9",
     "node-geocoder": "^3.16.0",
     "rxjs": "^5.1.0",
     "typescript": "^2.2.2",
