--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^4.0.1",
     "@ngui/parallax-scroll": "^0.5.0",
     "@types/google-maps": "^3.2.0",
+    "angular2-token": "^0.2.0-beta.11",
     "angular2-useful-swiper": "^4.0.1",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
