--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
+    "md2": "0.0.19",
     "ng2-events": "^3.0.0",
     "ng2-map": "^0.16.5",
+    "ng2-nouislider": "^1.6.0",
     "ng2-page-scroll": "^4.0.0-beta.6",
     "ng2-scrollspy": "^0.3.9",
     "node-geocoder": "^3.16.0",
+    "nouislider": "^9.2.0",
     "rxjs": "^5.1.0",
     "typescript": "^2.2.2",
     "zone.js": "^0.7.6"
