--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
+    "material-design-icons": "^3.0.1",
+    "material-design-lite": "^1.3.0",
     "md2": "0.0.19",
+    "mdl-stepper": "^1.1.6",
     "ng2-events": "^3.0.0",
     "ng2-map": "^0.16.5",
     "ng2-nouislider": "^1.6.0",
