--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "md2": "0.0.19",
     "mdl-stepper": "^1.1.6",
     "ng2-events": "^3.0.0",
+    "ng2-file-upload": "^1.2.1",
     "ng2-map": "^0.16.5",
     "ng2-nouislider": "^1.6.0",
     "ng2-page-scroll": "^4.0.0-beta.6",
