--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "ng2-map": "^0.16.5",
     "ng2-nouislider": "^1.6.0",
     "ng2-page-scroll": "^4.0.0-beta.6",
+    "ng2-pagination": "^2.0.1",
     "ng2-scrollspy": "^0.3.9",
+    "ngx-pagination": "^3.0.0",
     "node-geocoder": "^3.16.0",
     "nouislider": "^9.2.0",
     "rxjs": "^5.1.0",
