--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ng2-nouislider": "^1.6.0",
     "ng2-page-scroll": "^4.0.0-beta.6",
     "ng2-scrollspy": "^0.3.9",
+    "ng2stepper": "^1.0.5",
     "node-geocoder": "^3.16.0",
     "nouislider": "^9.2.0",
     "rxjs": "^5.1.0",
