--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "^4.0.1",
     "@ngui/parallax-scroll": "^0.5.0",
     "@types/google-maps": "^3.2.0",
+    "angular2-image-upload": "^0.6.1",
     "angular2-token": "^0.2.0-beta.11",
     "angular2-useful-swiper": "^4.0.1",
     "core-js": "^2.4.1",
@@ -40,6 +41,7 @@
     "ng2-events": "^3.0.0",
     "ng2-file-upload": "^1.2.1",
     "ng2-map": "^0.16.5",
+    "ng2-material-select": "^0.1.8",
     "ng2-nouislider": "^1.6.0",
     "ng2-page-scroll": "^4.0.0-beta.6",
     "ng2-scrollspy": "^0.3.9",
