--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ng2-scrollspy": "^0.3.9",
     "ng2stepper": "^1.0.5",
     "ngx-pagination": "^3.0.0",
+    "ngx-rating": "0.0.9",
     "node-geocoder": "^3.16.0",
     "nouislider": "^9.2.0",
     "rxjs": "^5.1.0",
