--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "^4.0.1",
     "@ngui/parallax-scroll": "^0.5.0",
     "@types/google-maps": "^3.2.0",
+    "angular2-google-maps": "^0.17.0",
     "angular2-image-upload": "^0.6.1",
     "angular2-token": "^0.2.0-beta.11",
     "angular2-useful-swiper": "^4.0.1",
