--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@angular/platform-browser-dynamic": "^4.0.1",
     "@angular/platform-server": "^4.0.1",
     "@angular/router": "^4.0.1",
+    "@ngui/map": "^0.18.1",
     "@ngui/parallax-scroll": "^0.5.0",
     "@types/google-maps": "^3.2.0",
+    "@types/googlemaps": "^3.26.11",
     "angular2-google-maps": "^0.17.0",
     "angular2-image-upload": "^0.6.1",
     "angular2-token": "^0.2.0-beta.11",
