--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "angular2-image-upload": "^0.6.1",
     "angular2-token": "^0.2.0-beta.11",
     "angular2-useful-swiper": "^4.0.1",
+    "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
@@ -41,6 +42,7 @@
     "material-design-lite": "^1.3.0",
     "md2": "0.0.19",
     "mdl-stepper": "^1.1.6",
+    "ng2-charts": "^1.5.0",
     "ng2-events": "^3.0.0",
     "ng2-file-upload": "^1.2.1",
     "ng2-map": "^0.16.5",
