--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "nouislider": "^9.2.0",
     "rxjs": "^5.1.0",
     "typescript": "^2.2.2",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.7.6",
+    "chart.js": "npm:chart.js#2.1.0"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0-rc.1",
