--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "nouislider": "^9.2.0",
     "rxjs": "^5.1.0",
     "typescript": "^2.2.2",
-    "chart.js": "npm:chart.js#2.1.0"
+    "chart.js": "npm:chart.js#2.1.0",
     "underscore": "^1.8.3",
     "zone.js": "^0.7.6"
   },
